[package]
name = "xed-sys"
version = "0.1.1"
authors = ["William Cody Laeder <codylaeder@gmail.com>"]
description = "FFI bindings to Intel XED encoder/decoder library"
documentation = "https://valarauca.github.io/xed-sys/xed_sys/index.html"
homepage = "https://github.com/valarauca/xed-sys"
repository = "https://github.com/valarauca/xed-sys"
categories = ["external-ffi-bindings", "hardware-support", "encoding", "parsing"]
license = "Apache-2.0"
keywords = ["xed", "intel", "asm", "x86", "x64"]

[dependencies]

[build-dependencies]
bindgen = "0.26.3"
